# Laser-setup-interface

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
examples/: channel-infinty-selector.rs  cli-controller.rs  freq-reader.rs  i2c-detect.rs
src/: lib.rs
src/protobuf/: messages.rs  mod.rs  pb_error.rs  protobuf_md_codec.rs
src/protobuf/proto/: laser_setup.proto
