[package]
name = "laser-setup-interface"
version = "0.3.0"
edition = "2021"
authors = ["ololoshka2871"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
bytes = { version = "1", default-features = false }
futures = "0.3"
clap = { version = "4.2", features = ["derive"] }
rand = "0.8"

log = "0.4"
env_logger = "0.10"

prost = "0.11"

embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal" }

[lib]
name = "laser_setup_interface"

# also for examples
[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
prost-build = "0.11"